people info update

--- a/bib/pubs.bib
+++ b/bib/pubs.bib
@@ -1,8 +1,311 @@
-@InProceedings{XXX,
-  author = 	 {Author 1 and Author 2},
-  title = 	 {Awesome Publication},
-  booktitle =    {International Conference on Awesome Research},
-  year = 	 2014,
-  month = 5,
-  url = {https://www.asdfasdf.asdfasdf.asdfasdfads}
+@article{sinevich2022small,
+  title={Small-Scale Irregularities Within Polarization Jet/SAID During Geomagnetic Activity},
+  author={Sinevich, AA and Chernyshov, AA and Chugunin, DV and Oinats, AV and Clausen, LBN and Miloch, WJ and Nishitani, N and Mogilevsky, MM},
+  journal={Geophysical Research Letters},
+  volume={49},
+  number={8},
+  pages={e2021GL097107},
+  year={2022},
+  publisher={Wiley Online Library}
+}
+
+@article{kotova2022interhemispheric,
+  title={Interhemispheric variability of the electron density and derived parameters by the Swarm satellites during different solar activity},
+  author={Kotova, Daria and Jin, Yaqi and Miloch, Wojciech},
+  journal={Journal of Space Weather and Space Climate},
+  volume={12},
+  pages={12},
+  year={2022},
+  publisher={EDP Sciences}
+}
+
+@article{kjolerbakken2022numerical,
+  title={Numerical Study of Non-Linear Effects for a Swept Bias Langmuir Probe},
+  author={Kj{\o}lerbakken, Kai Morgan and Miloch, Wojciech J and Martinsen, {\O}rjan Gr{\o}ttem and Pabst, Oliver and R{\o}ed, Ketil},
+  journal={IEEE Transactions on Plasma Science},
+  volume={50},
+  number={5},
+  pages={1237--1245},
+  year={2022},
+  publisher={IEEE}
+}
+
+@article{belakhovsky2022dayside,
+  title={Dayside Scintillations of GPS Signals According to the Observations on the Svalbard Archipelago},
+  author={Belakhovsky, VB and Jin, Y and Miloch, W},
+  journal={Bulletin of the Russian Academy of Sciences: Physics},
+  volume={86},
+  number={3},
+  pages={348--353},
+  year={2022},
+  publisher={Springer}
+}
+
+@article{brask2022electron,
+  title={Electron--neutral collisions effects on Langmuir probe in the lower E-region ionosphere},
+  author={Brask, SM and Marholm, S and Di Mare, F and Adhikari, S and Spicher, A and Takahashi, T and Miloch, WJ},
+  journal={Physics of Plasmas},
+  volume={29},
+  number={3},
+  pages={033511},
+  year={2022},
+  publisher={AIP Publishing LLC}
+}
+
+@article{sado2022transfer,
+  title={Transfer learning aurora image classification and magnetic disturbance evaluation},
+  author={Sado, Pascal and Clausen, Lasse Boy Novock and Miloch, Wojciech Jacek and Nickisch, Hannes},
+  journal={Journal of Geophysical Research: Space Physics},
+  volume={127},
+  number={1},
+  pages={e2021JA029683},
+  year={2022},
+  publisher={Wiley Online Library}
+}
+
+@article{jao2022wake,
+  title={Wake formation behind Langmuir probes in ionospheric plasmas},
+  author={Jao, Chun-Sung and Marholm, Sigvald and Spicher, Andres and Miloch, Wojciech J},
+  journal={Advances in Space Research},
+  volume={69},
+  number={2},
+  pages={856--868},
+  year={2022},
+  publisher={Elsevier}
+}
+
+@article{monte2021method,
+  title={Method for Forecasting Ionospheric Electron Content Fluctuations Based on the Optical Flow Algorithm},
+  author={Monte-Moreno, Enric and Hernandez-Pajares, Manuel and Yang, Heng and Rigo, Alberto Garc{\'\i}a and Jin, Yaqi and H{\o}eg, Per and Miloch, Wojciech J and Wielgosz, Pawel and Jarmo{\l}owski, Wojciech and Paziewski, Jacek and others},
+  journal={IEEE Transactions on Geoscience and Remote Sensing},
+  volume={60},
+  pages={1--21},
+  year={2021},
+  publisher={IEEE}
+}
+
+@article{sinevich2021spatial,
+  title={Spatial Structure of Polarization Jet according to NorSat-1 and Swarm Satellite Data},
+  author={Sinevich, AA and Chernyshov, AA and Chugunin, DV and Miloch, WJ and Mogilevsky, MM},
+  journal={Cosmic Research},
+  volume={59},
+  number={6},
+  pages={463--471},
+  year={2021},
+  publisher={Springer}
+}
+
+
+@article{sinevich2021studying,
+  title={Studying the small-scale structure of a polarization jet during the April 20, 2018 geomagnetic storm},
+  author={Sinevich, AA and Chernyshov, AA and Chugunin, Dmitry V and Miloch, Wojciech Jacek and Mogilevsky, Mikhail M},
+  journal={Solar-Terrestrial Physics},
+  volume={7},
+  pages={17--26},
+  year={2021}
+}
+
+@inproceedings{palmroth2021lower,
+  title={Lower-thermosphere--ionosphere (LTI) quantities: current status of measuring techniques and models},
+  author={Palmroth, Minna and Grandin, Maxime and Sarris, Theodoros and Doornbos, Eelco and Tourgaidis, Stelios and Aikio, Anita and Buchert, Stephan and Clilverd, Mark A and Dandouras, Iannis and Heelis, Roderick and others},
+  booktitle={Annales Geophysicae},
+  volume={39},
+  number={1},
+  pages={189--237},
+  year={2021},
+  organization={Copernicus GmbH}
+}
+
+@inproceedings{belakhovsky2021influence,
+  title={Influence of different types of ionospheric disturbances on GPS signals at polar latitudes},
+  author={Belakhovsky, Vladimir B and Jin, Yaqi and Miloch, Wojciech J},
+  booktitle={Annales Geophysicae},
+  volume={39},
+  number={4},
+  pages={687--700},
+  year={2021},
+  organization={Copernicus GmbH}
+}
+
+@article{jin2021statistical,
+  title={Statistical distribution of decameter scale (50 m) ionospheric irregularities at high latitudes},
+  author={Jin, Yaqi and Clausen, Lasse BN and Spicher, Andres and Ivarsen, Magnus F and Zhang, Yongliang and Miloch, Wojciech J and Moen, J{\o}ran I},
+  journal={Geophysical Research Letters},
+  volume={48},
+  number={19},
+  pages={e2021GL094794},
+  year={2021},
+  publisher={Wiley Online Library}
+}
+
+
+@article{ivarsen2021lifetimes,
+  title={The lifetimes of plasma structures at high latitudes},
+  author={Ivarsen, Magnus F and Jin, Yaqi and Spicher, Andres and Miloch, Wojciech and Clausen, Lasse BN},
+  journal={Journal of Geophysical Research: Space Physics},
+  volume={126},
+  number={2},
+  pages={e2020JA028117},
+  year={2021},
+  publisher={Wiley Online Library}
+}
+
+@article{skjaeveland2021case,
+  title={Case studies of ionospheric plasma irregularities over Queen Maud Land, Antarctica},
+  author={Skj{\ae}veland, Arnlaug H and Kotova, Daria S and Miloch, Wojciech J},
+  journal={Journal of Geophysical Research: Space Physics},
+  volume={126},
+  number={10},
+  pages={e2021JA029963},
+  year={2021},
+  publisher={Wiley Online Library}
+}
+
+@article{ivarsen2021steepening,
+  title={Steepening Plasma Density Spectra in the Ionosphere: The Crucial Role Played by a Strong E-Region},
+  author={Ivarsen, Magnus F and St-Maurice, Jean-Pierre and Jin, Yaqi and Park, Jaeheung and Miloch, Wojciech and Spicher, Andres and Kwak, Young-Sil and Clausen, Lasse BN},
+  journal={Journal of Geophysical Research: Space Physics},
+  volume={126},
+  number={8},
+  pages={e2021JA029401},
+  year={2021},
+  publisher={Wiley Online Library}
+}
+
+@article{di2021turbulence,
+  title={Turbulence and Intermittency in the Winter Cusp Ionosphere Studied With the ICI Sounding Rockets},
+  author={Di Mare, Francesca and Spicher, Andres and Clausen, Lasse Boy Novock and Miloch, Wojciech Jacek and Moen, J{\o}ran Idar},
+  journal={Journal of Geophysical Research: Space Physics},
+  volume={126},
+  number={8},
+  pages={e2021JA029150},
+  year={2021},
+  publisher={Wiley Online Library}
+}
+
+@article{kjolerbakken2021influence,
+  title={The influence of probe spacing and probe bias in a double Langmuir probe setup},
+  author={Kj{\o}lerbakken, Kai Morgan and Miloch, Wojciech J and R{\o}ed, Ketil},
+  journal={AIP Advances},
+  volume={11},
+  number={8},
+  pages={085007},
+  year={2021},
+  publisher={AIP Publishing LLC}
+}
+
+@article{zakharov2020influence,
+  title={Influence of the Ionosphere on the Parameters of the GPS Navigation Signals during a Geomagnetic Substorm},
+  author={Zakharov, VI and Chernyshov, AA and Miloch, W and Jin, Y},
+  journal={Geomagnetism and Aeronomy},
+  volume={60},
+  number={6},
+  pages={754--767},
+  year={2020},
+  publisher={Springer}
+}
+
+@incollection{belakhovsky2020influence,
+  title={Influence of different ionospheric disturbances on the GPS scintillations at high latitudes},
+  author={Belakhovsky, VB and Jin, Y and Miloch, WJ},
+  booktitle={Problems of Geocosmos--2018},
+  pages={281--287},
+  year={2020},
+  publisher={Springer}
+}
+
+@inproceedings{belakhovsky2020influence,
+  title={Influence of the substorm precipitations and polar cap patches on the GPS signals at polar latitudes},
+  author={Belakhovsky, Vladimir B and Jin, Yaqi and Miloch, Wojciech J and Koustov, Alexander V and Reimer, Ashton},
+  booktitle={Atmosphere, Ionosphere, Safety},
+  pages={91--93},
+  year={2020}
+}
+
+@article{miyake2020electron,
+  title={Electron Wing-Like Structures Formed at a Negatively Charged Spacecraft Moving in a Magnetized Plasma},
+  author={Miyake, Yohei and Miloch, Wojciech Jacek and Kjus, SH and P{\'e}cseli, Hans L},
+  journal={Journal of Geophysical Research: Space Physics},
+  volume={125},
+  number={2},
+  pages={e2019JA027379},
+  year={2020},
+  publisher={Wiley Online Library}
+}
+
+@article{chernyshov2020relationship,
+  title={Relationship between TEC jumps and auroral substorm in the high-latitude ionosphere},
+  author={Chernyshov, Alexander A and Miloch, Wojciech Jacek and Jin, Yaqi and Zakharov, Viktor I},
+  journal={Scientific reports},
+  volume={10},
+  number={1},
+  pages={1--13},
+  year={2020},
+  publisher={Nature Publishing Group}
+}
+
+@article{faehn2020two,
+  title={Two-Dimensional Reconstruction of Ionospheric Plasma Density Variations Using Swarm},
+  author={F{\ae}hn Follestad, A and Clausen, Lasse Boy Novock and Miloch, Wojciech Jacek and van den IJssel, J and Haagmans, Roger},
+  journal={Space Weather},
+  volume={18},
+  number={6},
+  pages={e2019SW002406},
+  year={2020},
+  publisher={Wiley Online Library}
+}
+
+@article{jin2020ionospheric,
+  title={Ionospheric plasma irregularities based on in situ measurements from the Swarm satellites},
+  author={Jin, Yaqi and Xiong, Chao and Clausen, Lasse and Spicher, Andres and Kotova, Daria and Brask, Steffen and Kervalishvili, Guram and Stolle, Claudia and Miloch, Wojciech},
+  journal={Journal of Geophysical Research: Space Physics},
+  volume={125},
+  number={7},
+  pages={e2020JA028103},
+  year={2020},
+  publisher={Wiley Online Library}
+}
+
+@article{chernyshov2020situ,
+  title={In situ observations of ionospheric heating effects: first results from a joint SURA and NorSat-1 experiment},
+  author={Chernyshov, Alexander A and Chugunin, Dmitry V and Frolov, Vladimor L and Clausen, Lasse Boy Novock and Miloch, Wojciech Jacek and Mogilevsky, Mikhail M},
+  journal={Geophysical Research Letters},
+  volume={47},
+  number={13},
+  pages={e2020GL088462},
+  year={2020},
+  publisher={Wiley Online Library}
+}
+
+@article{marholm2020novel,
+  title={A Novel Method for Circuits of Perfect Electric Conductors in Unstructured Particle-in-Cell Plasma--Object Interaction Simulations},
+  author={Marholm, Sigvald and Darian, Diako and Mortensen, Mikael and Marchand, Richard and Miloch, Wojciech J},
+  journal={IEEE Transactions on Plasma Science},
+  volume={48},
+  number={8},
+  pages={2856--2872},
+  year={2020},
+  publisher={IEEE}
+}
+
+@article{usui2019numerical,
+  title={Numerical study of plasma depletion region in a satellite wake},
+  author={Usui, Hideyuki and Miyake, Yohei and Miloch, Wojciech J and Ito, Keisuke},
+  journal={IEEE Transactions on Plasma Science},
+  volume={47},
+  number={8},
+  pages={3717--3723},
+  year={2019},
+  publisher={IEEE}
+}
+
+@article{jin2019simultaneous,
+  title={Simultaneous rocket and scintillation observations of plasma irregularities associated with a reversed flow event in the cusp ionosphere},
+  author={Jin, Yaqi and Moen, J{\o}ran I and Spicher, Andres and Oksavik, Kjellmar and Miloch, Wojciech J and Clausen, Lasse BN and Po{\.z}oga, Mariusz and Saito, Yoshifumi},
+  journal={Journal of Geophysical Research: Space Physics},
+  volume={124},
+  number={8},
+  pages={7098--7111},
+  year={2019},
+  publisher={Wiley Online Library}
 }
