people info update

--- a/bib/pubs.bib
+++ b/bib/pubs.bib
@@ -6,6 +6,7 @@
   number={8},
   pages={e2021GL097107},
   year={2022},
+  month = 4,
   publisher={Wiley Online Library}
 }
 
@@ -16,6 +17,7 @@
   volume={12},
   pages={12},
   year={2022},
+  month = 4,
   publisher={EDP Sciences}
 }
 
@@ -27,6 +29,7 @@
   number={5},
   pages={1237--1245},
   year={2022},
+  month = 4,
   publisher={IEEE}
 }
 
@@ -38,6 +41,7 @@
   number={3},
   pages={348--353},
   year={2022},
+  month = 4,
   publisher={Springer}
 }
 
@@ -49,6 +53,7 @@
   number={3},
   pages={033511},
   year={2022},
+  month = 3,
   publisher={AIP Publishing LLC}
 }
 
@@ -60,6 +65,7 @@
   number={1},
   pages={e2021JA029683},
   year={2022},
+  month = 12,
   publisher={Wiley Online Library}
 }
 
@@ -71,6 +77,7 @@
   number={2},
   pages={856--868},
   year={2022},
+  month = 1,
   publisher={Elsevier}
 }
 
@@ -81,6 +88,7 @@
   volume={60},
   pages={1--21},
   year={2021},
+  month = 11,
   publisher={IEEE}
 }
 
@@ -92,6 +100,7 @@
   number={6},
   pages={463--471},
   year={2021},
+  month = 11,
   publisher={Springer}
 }
 
@@ -102,7 +111,8 @@
   journal={Solar-Terrestrial Physics},
   volume={7},
   pages={17--26},
-  year={2021}
+  year={2021},
+  month = 3
 }
 
 @inproceedings{palmroth2021lower,
@@ -113,6 +123,7 @@
   number={1},
   pages={189--237},
   year={2021},
+  month = 2,
   organization={Copernicus GmbH}
 }
 
@@ -124,6 +135,7 @@
   number={4},
   pages={687--700},
   year={2021},
+  month = 7,
   organization={Copernicus GmbH}
 }
 
@@ -135,6 +147,7 @@
   number={19},
   pages={e2021GL094794},
   year={2021},
+  month = 9,
   publisher={Wiley Online Library}
 }
 
@@ -147,6 +160,7 @@
   number={2},
   pages={e2020JA028117},
   year={2021},
+  month = 1,
   publisher={Wiley Online Library}
 }
 
@@ -158,6 +172,7 @@
   number={10},
   pages={e2021JA029963},
   year={2021},
+  month = 9,
   publisher={Wiley Online Library}
 }
 
@@ -169,6 +184,7 @@
   number={8},
   pages={e2021JA029401},
   year={2021},
+  month = 7,
   publisher={Wiley Online Library}
 }
 
@@ -180,6 +196,7 @@
   number={8},
   pages={e2021JA029150},
   year={2021},
+  month = 7,
   publisher={Wiley Online Library}
 }
 
@@ -191,6 +208,7 @@
   number={8},
   pages={085007},
   year={2021},
+  month = 8,
   publisher={AIP Publishing LLC}
 }
 
@@ -202,6 +220,7 @@
   number={6},
   pages={754--767},
   year={2020},
+  month = 12,
   publisher={Springer}
 }
 
@@ -211,6 +230,7 @@
   booktitle={Problems of Geocosmos--2018},
   pages={281--287},
   year={2020},
+  month = 7,
   publisher={Springer}
 }
 
@@ -219,7 +239,8 @@
   author={Belakhovsky, Vladimir B and Jin, Yaqi and Miloch, Wojciech J and Koustov, Alexander V and Reimer, Ashton},
   booktitle={Atmosphere, Ionosphere, Safety},
   pages={91--93},
-  year={2020}
+  year={2020},
+  month = 9
 }
 
 @article{miyake2020electron,
@@ -230,6 +251,7 @@
   number={2},
   pages={e2019JA027379},
   year={2020},
+  month = 12,
   publisher={Wiley Online Library}
 }
 
@@ -241,6 +263,7 @@
   number={1},
   pages={1--13},
   year={2020},
+  month = 4,
   publisher={Nature Publishing Group}
 }
 
@@ -252,6 +275,7 @@
   number={6},
   pages={e2019SW002406},
   year={2020},
+  month = 5,
   publisher={Wiley Online Library}
 }
 
@@ -263,6 +287,7 @@
   number={7},
   pages={e2020JA028103},
   year={2020},
+  month = 6,
   publisher={Wiley Online Library}
 }
 
@@ -274,6 +299,7 @@
   number={13},
   pages={e2020GL088462},
   year={2020},
+  month = 6,
   publisher={Wiley Online Library}
 }
 
@@ -285,6 +311,7 @@
   number={8},
   pages={2856--2872},
   year={2020},
+  month = 7,
   publisher={IEEE}
 }
 
@@ -296,6 +323,7 @@
   number={8},
   pages={3717--3723},
   year={2019},
+  month = 6,
   publisher={IEEE}
 }
 
@@ -307,5 +335,6 @@
   number={8},
   pages={7098--7111},
   year={2019},
+  month = 8,
   publisher={Wiley Online Library}
 }
