people info update

--- a/_posts/2022-08-17-image.md
+++ b/_posts/2022-08-17-image.md
@@ -2,9 +2,9 @@
 layout: post
 shortnews: true
 icon: newspaper-o
-image: /img/waffle.jpg
+image: Waffle
 image_style: "max-height: 100px;"
-image_link: "https://en.wikipedia.org/wiki/X-Men"
+image_link: "/img/waffle.jpg"
 ---
 
 Space Waffles this Friday!!
