people info update

--- a/_posts/2022-08-17-image.md
+++ b/_posts/2022-08-17-image.md
@@ -2,9 +2,9 @@
 layout: post
 shortnews: true
 icon: newspaper-o
-image: Waffle
+image: https://upload.wikimedia.org/wikipedia/commons/5/5b/Waffles_with_Strawberries.jpg
 image_style: "max-height: 100px;"
-image_link: "/img/waffle.jpg"
+image_link: "https://en.wikipedia.org/wiki/Waffle"
 ---
 
 Space Waffles this Friday!!
