--- a/bib/pubs.bib
+++ b/bib/pubs.bib
@@ -338,3 +338,25 @@
   month = 8,
   publisher={Wiley Online Library}
 }
+
+@article{sado2022transfer,
+  title={Transfer learning aurora image classification and magnetic disturbance evaluation},
+  author={Sado, Pascal and Clausen, Lasse Boy Novock and Miloch, Wojciech Jacek and Nickisch, Hannes},
+  journal={Journal of Geophysical Research: Space Physics},
+  volume={127},
+  number={1},
+  pages={e2021JA029683},
+  year={2022},
+  publisher={Wiley Online Library}
+}
+
+@article{sado2023substorm,
+  title={Substorm onset prediction using machine learning classified auroral images},
+  author={Sado, Pascal and Clausen, Lasse Boy Novock and Miloch, Wojciech Jacek and Nickisch, Hannes},
+  journal={Space Weather},
+  volume={21},
+  number={2},
+  pages={e2022SW003300},
+  year={2023},
+  publisher={Wiley Online Library}
+}
