--- a/bib/pubs.bib
+++ b/bib/pubs.bib
@@ -360,3 +360,14 @@
   year={2023},
   publisher={Wiley Online Library}
 }
+@article{jin2022ionospheric,
+  title={Ionospheric Plasma IRregularities-IPIR-data product based on data from the Swarm satellites},
+  author={Jin, Yaqi and Kotova, Daria and Xiong, Chao and Brask, Steffen M and Clausen, Lasse BN and Kervalishvili, Guram and Stolle, Claudia and Miloch, Wojciech J},
+  journal={Journal of Geophysical Research: Space Physics},
+  volume={127},
+  number={4},
+  pages={e2021JA030183},
+  year={2022},
+  publisher={Wiley Online Library}
+}
+
