--- a/bib/pubs.bib
+++ b/bib/pubs.bib
@@ -371,4 +371,14 @@
   publisher={Wiley Online Library}
 }
 
+@article{song2023tandem,
+  title={Tandem Observations of Nighttime Mid-Latitude Topside Ionospheric Perturbations},
+  author={Song, Hosub and Park, Jaeheung and Jin, Yaqi and Otsuka, Yuichi and Buchert, Stephan and Lee, Jaejin and Yi, Yu},
+  journal={Space Weather},
+  volume={21},
+  number={2},
+  pages={e2022SW003312},
+  year={2023},
+  publisher={Wiley Online Library}
+}
 
