--- a/bib/conf.bib
+++ b/bib/conf.bib
@@ -4,6 +4,6 @@
   title={Ionospheric plasma structuring over Antarctica based on satellite and ground observations},
   author={Wojciech Jacek Miloch, Daria Kotova and Yaqi Jin},
   booktitle={10th SCAR Open Science Conference and Brian Kernighan},
-},
   year={2022},
+  month = 8,
 }
