--- a/bib/pubs.bib
+++ b/bib/pubs.bib
@@ -370,3 +370,96 @@
   publisher={Wiley Online Library}
 }
 
+@article{kotova2022interhemispheric,
+  title={Interhemispheric variability of the electron density and derived parameters by the swarm satellites during different solar activity},
+  author={Kotova, Daria and Jin, Yaqi and Miloch, Wojciech},
+  journal={Journal of Space Weather and Space Climate},
+  volume={12},
+  pages={12},
+  year={2022},
+  month = 9
+  publisher={EDP Sciences}
+}
+
+@article{kotova2022electron,
+  title={Electron density fluctuations from Swarm as a proxy for ground-based scintillation data: A statistical perspective},
+  author={Kotova, Daria and Jin, Yaqi and Spogli, Luca and Wood, Alan G and Urbar, Jaroslav and Rawlings, James T and Whittaker, Ian C and Alfonsi, Lucilla and Clausen, Lasse BN and H{\o}eg, Per and others},
+  journal={Advances in Space Research},
+  year={2022},
+  month = 11
+  publisher={Elsevier}
+}
+
+@article{wood2022variability,
+  title={Variability of ionospheric plasma: results from the ESA swarm mission},
+  author={Wood, Alan G and Alfonsi, Lucilla and Clausen, Lasse BN and Jin, Yaqi and Spogli, Luca and Urb{\'a}{\v{r}}, Jaroslav and Rawlings, James T and Whittaker, Ian C and Dorrian, Gareth D and H{\o}eg, Per and others},
+  journal={Space Science Reviews},
+  volume={218},
+  number={6},
+  pages={52},
+  year={2022},
+  month = 8
+  publisher={Springer}
+}
+@article{paziewski2022implications,
+  title={The implications of ionospheric disturbances for precise GNSS positioning in Greenland},
+  author={Paziewski, Jacek and H{\o}eg, Per and Sieradzki, Rafal and Jin, Yaqi and Jarmolowski, Wojciech and Hoque, M Mainul and Berdermann, Jens and Hernandez-Pajares, Manuel and Wielgosz, Pawel and Lyu, Haixia and others},
+  journal={Journal of Space Weather and Space Climate},
+  volume={12},
+  year={2022},
+  month = 9
+  publisher={EDP Sciences}
+}
+
+@article{jin2022climatology,
+  title={Climatology and modeling of ionospheric irregularities over Greenland based on empirical orthogonal function method},
+  author={Jin, Yaqi and Clausen, Lasse and Miloch, Wojciech Jacek and H{\o}eg, Per and Jarmo{\l}owski, Wojciech and Wielgosz, Pawel and Paziewski, Jacek and Milanowska, Beata and Hoque, Mainul and Berdermann, Jens and others},
+  journal={Journal of Space Weather and Space Climate},
+  volume={12},
+  number={23},
+  year={2022},
+  month = 6
+  publisher={EDP Sciences}
+}
+@article{urbar2022multi,
+  title={Multi-scale response of the high-latitude topside ionosphere to geospace forcing},
+  author={Urbar, Jaroslav and Spogli, Luca and Cicone, Antonio and Clausen, Lasse BN and Jin, Yaqi and Wood, Alan G and Alfonsi, Lucilla and Cesaroni, Claudio and Kotova, Daria and H{\o}eg, Per and others},
+  journal={Advances in Space Research},
+  year={2022},
+  month = 6
+  publisher={Elsevier}
+}
+@article{song2022small,
+  title={A Small Peak in the Swarm-LP Plasma Density Data at the Dayside Dip Equator},
+  author={Song, Hosub and Park, Jaeheung and Buchert, Stephan and Jin, Yaqi and Chao, Chi Kuang and Lee, Jaejin and Yi, Yu},
+  journal={Journal of Geophysical Research: Space Physics},
+  volume={127},
+  number={7},
+  pages={e2022JA030319},
+  year={2022},
+  month = 7
+  publisher={Wiley Online Library}
+}
+
+@article{zheng2022refractive,
+  title={The refractive and diffractive contributions to GPS signal scintillation at high latitudes during the geomagnetic storm on 7--8 September 2017},
+  author={Zheng, Yuhao and Xiong, Chao and Jin, Yaqi and Liu, Dun and Oksavik, Kjellmar and Xu, Chunyu and Zhu, Yixun and Gao, Shunzu and Wang, Fengjue and Wang, Hui and others},
+  journal={Journal of Space Weather and Space Climate},
+  volume={12},
+  pages={40},
+  year={2022},
+  month = 11
+  publisher={EDP Sciences}
+}
+
+@article{spicher2022interferometric,
+  title={Interferometric study of ionospheric plasma irregularities in regions of phase scintillations and HF backscatter},
+  author={Spicher, Andres and LaBelle, James and Bonnell, John W and Roglans, Roger and Moser, Chrystal and Fuselier, Stephen A and Bounds, Scott and Clausen, Lasse BN and Di Mare, Francesca and Feltman, Connor A and others},
+  journal={Geophysical Research Letters},
+  volume={49},
+  number={12},
+  pages={e2021GL097013},
+  year={2022},
+  month = 6
+  publisher={Wiley Online Library}
+}
