--- a/bib/conf.bib
+++ b/bib/conf.bib
@@ -1,6 +1,6 @@
 
 
-@inproceedings{lesk:1977,
+@inproceedings{Miloch,
   title={Ionospheric plasma structuring over Antarctica based on satellite and ground observations},
   author={Wojciech Jacek Miloch, Daria Kotova and Yaqi Jin},
   booktitle={10th SCAR Open Science Conference and Brian Kernighan},
