--- a/bib/pubs.bib
+++ b/bib/pubs.bib
@@ -348,6 +348,7 @@
   month = 2,
   publisher={Wiley Online Library}
 }
+
 @article{jin2022ionospheric,
   title={Ionospheric Plasma IRregularities-IPIR-data product based on data from the Swarm satellites},
   author={Jin, Yaqi and Kotova, Daria and Xiong, Chao and Brask, Steffen M and Clausen, Lasse BN and Kervalishvili, Guram and Stolle, Claudia and Miloch, Wojciech J},
@@ -370,23 +371,12 @@
   publisher={Wiley Online Library}
 }
 
-@article{kotova2022interhemispheric,
-  title={Interhemispheric variability of the electron density and derived parameters by the swarm satellites during different solar activity},
-  author={Kotova, Daria and Jin, Yaqi and Miloch, Wojciech},
-  journal={Journal of Space Weather and Space Climate},
-  volume={12},
-  pages={12},
-  year={2022},
-  month = 9
-  publisher={EDP Sciences}
-}
-
 @article{kotova2022electron,
   title={Electron density fluctuations from Swarm as a proxy for ground-based scintillation data: A statistical perspective},
   author={Kotova, Daria and Jin, Yaqi and Spogli, Luca and Wood, Alan G and Urbar, Jaroslav and Rawlings, James T and Whittaker, Ian C and Alfonsi, Lucilla and Clausen, Lasse BN and H{\o}eg, Per and others},
   journal={Advances in Space Research},
   year={2022},
-  month = 11
+  month = 11,
   publisher={Elsevier}
 }
 
@@ -398,16 +388,17 @@
   number={6},
   pages={52},
   year={2022},
-  month = 8
+  month = 8,
   publisher={Springer}
 }
+
 @article{paziewski2022implications,
   title={The implications of ionospheric disturbances for precise GNSS positioning in Greenland},
   author={Paziewski, Jacek and H{\o}eg, Per and Sieradzki, Rafal and Jin, Yaqi and Jarmolowski, Wojciech and Hoque, M Mainul and Berdermann, Jens and Hernandez-Pajares, Manuel and Wielgosz, Pawel and Lyu, Haixia and others},
   journal={Journal of Space Weather and Space Climate},
   volume={12},
   year={2022},
-  month = 9
+  month = 9,
   publisher={EDP Sciences}
 }
 
@@ -418,17 +409,19 @@
   volume={12},
   number={23},
   year={2022},
-  month = 6
+  month = 6,
   publisher={EDP Sciences}
 }
+
 @article{urbar2022multi,
   title={Multi-scale response of the high-latitude topside ionosphere to geospace forcing},
   author={Urbar, Jaroslav and Spogli, Luca and Cicone, Antonio and Clausen, Lasse BN and Jin, Yaqi and Wood, Alan G and Alfonsi, Lucilla and Cesaroni, Claudio and Kotova, Daria and H{\o}eg, Per and others},
   journal={Advances in Space Research},
   year={2022},
-  month = 6
+  month = 6,
   publisher={Elsevier}
 }
+
 @article{song2022small,
   title={A Small Peak in the Swarm-LP Plasma Density Data at the Dayside Dip Equator},
   author={Song, Hosub and Park, Jaeheung and Buchert, Stephan and Jin, Yaqi and Chao, Chi Kuang and Lee, Jaejin and Yi, Yu},
@@ -437,7 +430,7 @@
   number={7},
   pages={e2022JA030319},
   year={2022},
-  month = 7
+  month = 7,
   publisher={Wiley Online Library}
 }
 
@@ -448,7 +441,7 @@
   volume={12},
   pages={40},
   year={2022},
-  month = 11
+  month = 11,
   publisher={EDP Sciences}
 }
 
@@ -460,6 +453,6 @@
   number={12},
   pages={e2021GL097013},
   year={2022},
-  month = 6
+  month = 6,
   publisher={Wiley Online Library}
 }
