--- a/bib/conf.bib
+++ b/bib/conf.bib
@@ -6,3 +6,11 @@
   year={2022},
   month = 8,
 }
+
+@inproceedings{Sado,
+  title={Long Term Statistical Space Weather Analysis},
+  author={P. Sado, L. B. N. Clausen, W. J. Miloch, H. Nickisch},
+  booktitle={18th European Space Weather Week, Zagreb, Croatia},
+  year={2022},
+  month = 9,
+}
