--- a/bib/pubs.bib
+++ b/bib/pubs.bib
@@ -46,7 +46,7 @@
 }
 
 @article{brask2022electron,
-  title={Electron--neutral collisions effects on Langmuir probe in the lower E-region ionosphere},
+  title={Electron-neutral collisions effects on Langmuir probe in the lower E-region ionosphere},
   author={Brask, SM and Marholm, S and Di Mare, F and Adhikari, S and Spicher, A and Takahashi, T and Miloch, WJ},
   journal={Physics of Plasmas},
   volume={29},
