--- a/bib/conf.bib
+++ b/bib/conf.bib
@@ -2,14 +2,14 @@
 @inproceedings{Miloch,
   title={Ionospheric plasma structuring over Antarctica based on satellite and ground observations},
   author={Wojciech Jacek Miloch, Daria Kotova and Yaqi Jin},
-  booktitle={10th SCAR Open Science Conference and Brian Kernighan},
+  booktitle={10th SCAR Open Science Conference},
   year={2022},
   month = 8,
 }
 
 @inproceedings{Sado,
   title={Long Term Statistical Space Weather Analysis},
-  author={P. Sado, L. B. N. Clausen, W. J. Miloch, H. Nickisch},
+  author={P. Sado, L B N Clausen, W J Miloch and H Nickisch},
   booktitle={18th European Space Weather Week, Zagreb, Croatia},
   year={2022},
   month = 9,
