--- a/bib/conf.bib
+++ b/bib/conf.bib
@@ -9,7 +9,7 @@
 
 @inproceedings{Sado,
   title={Long Term Statistical Space Weather Analysis},
-  author={P. Sado, L B N Clausen, W J Miloch and H Nickisch},
+  author={P Sado, L B N Clausen, W J Miloch and H Nickisch},
   booktitle={18th European Space Weather Week, Zagreb, Croatia},
   year={2022},
   month = 9,
