--- a/bib/conf.bib
+++ b/bib/conf.bib
@@ -1,7 +1,7 @@
 
 @inproceedings{Miloch,
   title={Ionospheric plasma structuring over Antarctica based on satellite and ground observations},
-  author={Wojciech Jacek Miloch, Daria Kotova and Yaqi Jin},
+  author={Wojciech Jacek Miloch and Daria Kotova and Yaqi Jin},
   booktitle={10th SCAR Open Science Conference},
   year={2022},
   month = 8,
@@ -9,7 +9,7 @@
 
 @inproceedings{Sado,
   title={Long Term Statistical Space Weather Analysis},
-  author={P Sado, L B N Clausen, W J Miloch and H Nickisch},
+  author={P Sado and L B N Clausen and W J Miloch and H Nickisch},
   booktitle={18th European Space Weather Week, Zagreb, Croatia},
   year={2022},
   month = 9,
