--- a/_posts/2022-08-17-image.md
+++ b/_posts/2022-08-17-image.md
@@ -7,9 +7,9 @@ image_style: "max-height: 100px;"
 image_link: "https://en.wikipedia.org/wiki/Waffle"
 ---
 
-Space Waffles this Friday!!
+<!-- Space Waffles this Friday!!
 
 The tradition is calling for a new space BBQ this friday, however, as long as we do not want to grill on paddle boats with rubber boots and raincoats attached, we will swap out the bbq for space waffles instead!
 
 Thus, we meet at 14 o’clock this friday, the 19th of August in the lunch room!
-There will be waffles and some condiments for your waffles, as will there possibilities for coffee and tea if you like!
+There will be waffles and some condiments for your waffles, as will there possibilities for coffee and tea if you like! -->
