--- a/bib/pubs.bib
+++ b/bib/pubs.bib
@@ -456,3 +456,15 @@
   month = 11,
   publisher={EDP Sciences}
 }
+
+@article{ivarsen2023algorithm,
+  title={An Algorithm to Separate Ionospheric Turbulence Radar Echoes From Those of Meteor Trails in Large Data Sets},
+  author={Ivarsen, Magnus F and St-Maurice, Jean-Pierre and Hussey, Glenn C and Galeschuk, Draven and Lozinsky, Adam and Pitzel, Brian and McWilliams, Kathryn A},
+  journal={Journal of Geophysical Research: Space Physics},
+  volume={128},
+  number={1},
+  pages={e2022JA031050},
+  year={2023},
+  month = 1
+  publisher={Wiley Online Library}
+}
